--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Work in progress</title>
-    <style type="text/css" media="screen">
-      body {
-        background-color: #f1f1f1;
-        margin: 0;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      }
+<title>TiMedia</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<body>
+<center>
+<h2>TiMedia</h2>
+<div id="access" style="border-style: solid; border-width: 10px;">
+ <h3>You need access to this page</h3>
+ <input placeholder="Username" id="username" type="text"><br>
+ <input placeholder="Password" id="password" type="password"><br>
+ <button onclick="checkPass()">Login!</button>
+ <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
+ </div>
+ 
+<div id="content" style="visibility: hidden;">
+ <h3>For another forum like this visit CoffeeMedia!</h3><br>
+ <a href="https://coffee-media.github.io/net/"><button>Click here to visit CoffeeMedia!</button></a><br><br>
+ <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
+ <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
+ <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
+ <img width=100px src="https://images-na.ssl-images-amazon.com/images/G/01/aplusautomation/vendorimages/0e74993e-8b04-4f99-a980-2437ad5c0728.jpg._CB283769908__SR150,300_.jpg">
+ <img width=200px src="http://i258.photobucket.com/albums/hh259/kaspernova/84PCS-Pink.jpg">
+ <h4></h4>
+ <a href="http://www.wolframalpha.com"><button>Click Here for a Useful Calculator</button></a><br><br>
+<!-- start Feedback -->
+<script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
+<!-- end Feedback -->
 
-      .container { margin: 50px auto 40px auto; width: 600px; text-align: center; }
+ <!-- begin comment box -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=278&num=50&ts=1494365140122");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end comment box -->
+</center>
+ </body>
 
-      a { color: #4183c4; text-decoration: none; }
-      a:hover { text-decoration: underline; }
+</div>
+<script>
+var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes"];
+function contains(a, obj) {
 
-      h1 { width: 800px; position:relative; left: -100px; letter-spacing: -1px; line-height: 60px; font-size: 60px; font-weight: 100; margin: 0px 0 50px 0; text-shadow: 0 1px 0 #fff; }
-      p { color: rgba(0, 0, 0, 0.5); margin: 20px 0; line-height: 1.6; }
-
-      ul { list-style: none; margin: 25px 0; padding: 0; }
-      li { display: table-cell; font-weight: bold; width: 1%; }
-
-      .logo { display: inline-block; margin-top: 35px; }
-      .logo-img-2x { display: none; }
-      @media
-      only screen and (-webkit-min-device-pixel-ratio: 2),
-      only screen and (   min--moz-device-pixel-ratio: 2),
-      only screen and (     -o-min-device-pixel-ratio: 2/1),
-      only screen and (        min-device-pixel-ratio: 2),
-      only screen and (                min-resolution: 192dpi),
-      only screen and (                min-resolution: 2dppx) {
-        .logo-img-1x { display: none; }
-        .logo-img-2x { display: inline-block; }
-      }
-
-      #suggestions {
-        margin-top: 35px;
-        color: #ccc;
-      }
-      #suggestions a {
-        color: #666666;
-        font-weight: 200;
-        font-size: 14px;
-        margin: 0 10px;
-      }
-
-    </style>
-  </head>
-  <body>
-
-    <div class="container">
-
-      <h1>TiMedia</h1>
-      <p><strong>A global TI forum.</strong></p>
-     <input type="text"><br>
-     <input type="password">
-    </div>
-  </body>
+  for (var i = 0; i < a.length; i++) {
+        if (a[i] === obj) {
+            return true;
+        }
+    }
+    return false;
+}
+function check() {
+ if (document.getElementById('answer').value == "1/3[ln(3)+ln(v)-ln(4)-ln(pi)]") {
+   document.getElementById('access').style = "visibility: hidden;";
+   document.getElementById('content').style = "visibility: block;";
+ }
+}
+ 
+function checkPass() {
+ if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
+   document.getElementById('access').style = "visibility: hidden;"
+   document.getElementById('content').style = "visibility: block;";
+ }
+}
+  
+ </script>
 </html>
