--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes"];
  
+ Element.prototype.remove = function() {
+    this.parentElement.removeChild(this);
+}
+NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
+    for(var i = this.length - 1; i >= 0; i--) {
+        if(this[i] && this[i].parentElement) {
+            this[i].parentElement.removeChild(this[i]);
+        }
+    }
+}
+ 
+ 
 function getCookie(cname) {
     var name = cname + "=";
     var decodedCookie = decodeURIComponent(document.cookie);
@@ -90,14 +102,14 @@ function check() {
  
 function checkPass() {
  if (contains(logins,document.getElementById('username').value + ':' + document.getElementById('password').value)) {
-   document.getElementById('access').style = "visibility: hidden;"
+   document.getElementById('access').remove();
    document.getElementById('content').style = "visibility: block;";
    document.cookie = "login=true";
  }
 }
 
  if (getCookie("login") == "true") {
-     document.getElementById('access').style = "visibility: hidden;";
+     document.getElementById('access').remove();
      document.getElementById('content').style = "visibility: block;";
  }
  </script>
