--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br><br><br>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- TiMedia Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4810559767376808"
+     data-ad-slot="6805376977"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div id="access">
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
