--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
  <p>May 10th, 2017: Added CAPTCHA.</p>
  </div>
  <h3>This is a TI forum, not social media</h3>
- <h3>For Social Media(and non TI related disscussions) visit CoffeeMedia!(The admins regularly post there too)</h3><br>
+ <h3>For social media (and non TI related disscussions), visit CoffeeMedia! (The admins regularly post there too!)</h3><br>
  <a href="https://coffee-media.github.io/net/"><button class="base btn2">Click here to visit CoffeeMedia!</button></a><br><br>
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=75px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
@@ -49,7 +49,7 @@
  <img width=100px src="https://images-na.ssl-images-amazon.com/images/G/01/aplusautomation/vendorimages/0e74993e-8b04-4f99-a980-2437ad5c0728.jpg._CB283769908__SR150,300_.jpg">
  <img width=200px src="http://i258.photobucket.com/albums/hh259/kaspernova/84PCS-Pink.jpg">
  <h4></h4>
- <a href="http://www.wolframalpha.com"><button class="base btn2">Click Here for a Useful Calculator</button></a><br><br>
+ <a href="http://www.wolframalpha.com"><button class="base btn2">Click here for a useful calculator</button></a><br><br>
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
 <!-- end Feedback -->
