--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
  <p>If you would like to appeal, post why on CoffeeMedia.</p>
+ <p>Reason: Spamming.</p>
  </div>
  <br>
 <div id="content" style="visibility: hidden;">
@@ -70,7 +71,7 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty"];
-var bannedusers = ["jellyfishguy"];
+var bannedusers = ["henry"];
  
  Element.prototype.remove = function() {
     this.parentElement.removeChild(this);
