--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@ function checkPass() {
                  document.getElementById('access').remove();
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
-                 document.cookie = "login=true";
                  if (document.getElementById('username').value == "guest") {
                    document.getElementById('HCB_comment_form_box').remove();
+                 } else {
+                  document.cookie = "login=true";
                  }
   }
  } else {
