--- a/beta/index.html
+++ b/beta/index.html
@@ -88,7 +88,7 @@ setInterval(changeName, 50)
 <h1 id="points-balance">0 TiPoints</h1>
 Final Balance<br><br>
    
- <div id="HCB_comment_box">Connecting...</div>
+ <div style="display:none;" id="HCB_comment_box">Connecting...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16894&num=50&ts=1506807847408");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 
@@ -107,7 +107,7 @@ Final Balance<br><br>
   <button onclick="newConversation()" class="btn btn-primary">New Conversation</button>
   <button onclick="removeConversation()" class="btn btn-danger">Remove Conversation</button>
   
- <div id="HCB_comment_box">Connecting...</div>
+ <div style="display:none;" id="HCB_comment_box">Connecting...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16894&num=50&ts=1506807847408");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 </div>
@@ -154,7 +154,7 @@ Final Balance<br><br>
   <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea><br>
   
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
- <div id="HCB_comment_box">Connecting...</div>
+ <div style="display:none;" id="HCB_comment_box">Connecting...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16894&num=50&ts=1506807847408");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 </div>
