--- a/beta/index.html
+++ b/beta/index.html
@@ -116,7 +116,7 @@ Final Balance<br><br>
       <h5 onkeyup="updateDoc()" style="outline: none;" id="content" contenteditable="true"></h5><br>
 
       <!-- Trigger the modal with a button -->
-      <button onclick="saveDoc()" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#saveModal">SAVE</button>
+      <button onclick="saveDoc()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal">SAVE</button>
 
       <!-- Modal -->
       <div id="saveModal" class="modal fade" role="dialog">
