--- a/beta/index.html
+++ b/beta/index.html
@@ -137,7 +137,7 @@ Final Balance<br><br>
   </div>
 </div>
 </div>
-<div style="visibility: hidden; color:red;" id="view"></div>
+<div style="visibility: hidden;" id="view"></div>
 </div>
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
