--- a/beta/index.html
+++ b/beta/index.html
@@ -136,7 +136,7 @@ Final Balance<br><br>
   </div>
 </div>
 </div>
-<div style="visibility: hidden;" id="view"></div>
+<h5 style="visibility: hidden;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">EDIT</button>
 </div>
 <div style="display: none;" id="ticontacts">
