--- a/beta/index.html
+++ b/beta/index.html
@@ -115,29 +115,10 @@ Final Balance<br><br>
     <div id="create">
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
 
-      <!-- Trigger the modal with a button -->
-      <button onclick="saveDoc()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal">SAVE</button>
-      <!-- Modal -->
-      <div id="saveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content"><br>
-        <div class="modal-header">
-          <h4 class="modal-title">Document Saved</h4>
-        </div>
-        <div class="modal-body">
-            <p id="url">Your URL:</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-  </div>
-</div>
-</div>
+      <button onclick="saveDoc()" class="btn btn-primary">Save</button>
+ 
 <h5 style="visibility: hidden;" id="view"></h5><br>
-<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">EDIT</button>
+<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
 </div>
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
