--- a/beta/index.html
+++ b/beta/index.html
@@ -116,10 +116,10 @@ Final Balance<br><br>
       <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
 
       <button onclick="saveDoc()" class="btn btn-primary">Save</button>
- 
-<h5 style="visibility: hidden;" id="view"></h5><br>
+  </div>
+<h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
-</div>
+
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
   <div id="ticontacts-contacts">
