--- a/beta/index.html
+++ b/beta/index.html
@@ -111,7 +111,11 @@ Final Balance<br><br>
 
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
-  <div id="loading-bar" class="progress-bar progress-bar active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="display: none; width: 0%"></div>
+ <div class="progress">
+  <div class="progress-bar active" role="progressbar"
+  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+  </div>
+</div>
   <div id="ticontacts-contacts">
     You have no contacts.
   </div><br>
