--- a/beta/index.html
+++ b/beta/index.html
@@ -111,9 +111,9 @@ Final Balance<br><br>
 
 <div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
- <div class="progress">
+ <div id="progress-parent" class="progress" style="display:none;">
   <div id="progress-bar" class="progress-bar active" role="progressbar"
-  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="display:none; width:0%;">
+  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%;">
   </div>
 </div>
   <div id="ticontacts-contacts">
