--- a/beta/index.html
+++ b/beta/index.html
@@ -119,7 +119,7 @@ Final Balance<br><br>
   <div id="ticontacts-contacts">
     You have no contacts.
   </div><br>
-    <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button>
+    <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button><br>
   <h3>Add Contact</h3>
   <input id="ticontacts-user" class="form-control" placeholder="Username"><br>
   
