--- a/beta/index.html
+++ b/beta/index.html
@@ -119,11 +119,11 @@ Final Balance<br><br>
   <div id="ticontacts-contacts">
     You have no contacts.
   </div><br>
-    <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button><br>
+    <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button><br><br>
   <h3>Add Contact</h3>
   <input id="ticontacts-user" class="form-control" placeholder="Username"><br>
   
-  <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea><br>
+  <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea>
   
   <p id="ticontacts-error" style="color: red;"></p>
   
