--- a/beta/index.html
+++ b/beta/index.html
@@ -176,6 +176,7 @@ function alertAds() {
     <script src="messages.js"></script>
     <script src="new.js"></script>
     <script src="contacts.js"></script>
+    <script src="settings.js"></script>
     </div>
   </body>
 </html>
