--- a/beta/index.html
+++ b/beta/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css" crossorigin="anonymous">
     <title>Home - TiMedia</title>
   </head>
-  <body>
+  <body id="body">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
