--- a/beta/index.html
+++ b/beta/index.html
@@ -11,7 +11,7 @@
     <title>Home - TiMedia</title>
   </head>
   <body id="body">
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: yellow;">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
