--- a/beta/index.html
+++ b/beta/index.html
@@ -159,6 +159,8 @@ function alertAds() {
        <h3>Settings</h3><br>
        Background Image<br>
       <input class="form-control" type="text" id="backgroundImg"><br>
+       Bar Color<br>
+      <input class="form-control" type="text" id="barColor"><br>
       <button onclick="updateBackgroundImg()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
