--- a/beta/index.html
+++ b/beta/index.html
@@ -160,7 +160,7 @@ function alertAds() {
        Background Image<br>
       <input class="form-control" type="text" id="backgroundImg"><br>
        Bar Color<br>
-      <input class="form-control" type="color" id="barColor"><br>
+      <input value="#2296f3" class="form-control" type="color" id="barColor"><br>
       <button onclick="updateBackgroundImg()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
