--- a/beta/index.html
+++ b/beta/index.html
@@ -160,7 +160,7 @@ function alertAds() {
        Background Image<br>
       <input class="form-control" type="text" id="backgroundImg"><br>
        Bar Color<br>
-      <input id="barColor" class="jscolor" value="2296f3"><br><br>
+      <input id="barColor" class="jscolor form-control" value="2296f3"><br><br>
       <button onclick="updateBackgroundImg()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
