--- a/beta/index.html
+++ b/beta/index.html
@@ -161,6 +161,10 @@ function alertAds() {
       <input class="form-control" type="text" id="backgroundImg"><br>
        Bar Color<br>
       <input id="barColor" class="jscolor form-control" value="2296f3"><br><br>
+      <button onclick="#" class="btn btn-success"></button>
+      <button onclick="#" class="btn btn-success"></button>
+       <button onclick="#" class="btn btn-success"></button>
+       <button onclick="#" class="btn btn-success"></button>
       <button onclick="updateBackgroundImg()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
